# django_drf_hw

./: .env.example  .flake8  Dockerfile  README.md  docker-compose.yml  manage.py  nginx.conf  pyproject.toml
.github/workflows/: deploy.yml  main.yml
config/: celery.py  settings.py  urls.py
django_drf_hw/: asgi.py  settings.py  urls.py  wsgi.py
lms/: models.py  paginators.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
lms/fixtures/: courses.json  lessons.json
lms/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py  0003_alter_course_owner_alter_lesson_owner.py  0004_alter_course_options_alter_lesson_options_and_more.py  0005_alter_course_description.py
users/: admin.py  models.py  permissions.py  serializers.py  services.py  tests.py  urls.py  views.py
users/fixtures/: payments.json  users.json
users/management/commands/: create_groups.py
users/migrations/: 0001_initial.py  0002_subscriptionforcourse.py  0003_alter_payment_options_payment_link_and_more.py  0004_payment_status_alter_payment_user.py  0005_remove_payment_status_payment_is_paid_and_more.py
