[tool.poetry]
name = "django-drf-hw"
version = "0.1.0"
description = "Django DRF Homework"
authors = ["kopstant"]
readme = "README.md" #File readme
packages = [
    { include = "config" },
    { include = "lms" },
    { include = "users" },
]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.6"
djangorestframework = "^3.15.2"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.0.1"
celery = "^5.4.0"
redis = "^5.2.1"
django-celery-beat = "^2.7.0"
django-filter = "^25.1"
django-redis = "^5.4.0"
djangorestframework-simplejwt = "^5.5.0"
drf-yasg = "^1.21.10"
gunicorn = "^21.2.0"
whitenoise = "^6.9.0"
stripe = "^11.6.0"
Pillow = "^11.1.0"
django-timezone-field = "^7.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
coverage = "^7.7.1"
black = "^25.1.0"
flake8 = "^7.2.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 127
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/docs
'''

[tool.isort]
profile = "black"
line_length = 127
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
